# Recommender

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: FEATURE_STORE_DESCRIPTION.md  PARQUET_VS_CSV_EXPLAINED.md  amazon_dataset_eda.ipynb  analyze_and_generate_report.py  extract_amazon_dataset.ipynb  extract_amazon_dataset.py  generate_data.ipynb
data/docs/: AMAZON_SOFTWARE_ANALYSIS_REPORT.md  DATA_DICTIONARY.md  ETL_IMPROVEMENT_GUIDE.md  algorithms.md  data_usage_guide.md
data/input/: user_likes.csv  user_recent.csv
data/input/movie_dataset/: img.csv
etl_notebook/: etl_v2.ipynb  extract_from_dataset.ipynb  extract_from_dataset_v2.ipynb  extract_tables_from_reviews_meta.ipynb  get_user_item_df.ipynb
models/: cb_tfidf.joblib
notebook/: cbf_tfidf_cosine.ipynb  cf_recommend.ipynb  collaborative_filtering_recommender.ipynb  content_based_recommender.ipynb
recommendation/: .env  CB_RECOMMEND_EXPLANATION.md  CF_RECOMMEND_EXPLANATION.md  DEPLOYMENT_ARCHITECTURE.md  cb_recommend.ipynb  cb_recommend.py  recommendor_ai_agent.md
src/content_based_filtering/: __init__.py  config.py  data_loader.py  main.py  model.py  recommender.py
